--- a/paymybill.web.app/appsettings.json
+++ b/paymybill.web.app/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-paymybill.web.app-26A9FE5C-6023-4E63-9BC9-23291AD8E8B3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=paymybill;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-14a92da5-e355-458c-bd92-8e2da3f7fd3f;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
